--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "framer-motion": "^11.15.0",
     "html2pdf.js": "^0.10.2",
     "lucide-react": "^0.460.0",
-    "next": "15.0.3",
+    "next": "^16.0.8",
     "next-cloudinary": "^6.16.0",
     "nookies": "^2.5.2",
     "puppeteer": "^23.11.1",
